@@ -37,7 +37,6 @@
             <li><a href="#3_1">I need something more recent than the last release; how
                   should I build it?</a></li>
             <li><a href="#3_2">Linker bug on Solaris</a></li>
-            <li><a href="#3_3">Can I configure/build in the source tree?</a></li>
           </ol>
         </li>
         <li><a href="#4_0">Gcj Compile/Link Questions</a> 
@@ -306,26 +305,6 @@ collect2: ld returned 1 exit status
         </dd>
       </dl>
 
-      <hr />
-      <h3><a name="3_3">3.3 Can I configure/build in the source tree?</a></h3>
-      <dl> 
-        <dd>
-          No.  You cannot configure/build in the source tree.  If you try,
-          you'll see something like:
-          <pre>
-$ ./configure [...]
-Configuring for a i686-pc-linux-gnu host.
-*** Cannot currently configure in source tree.
-          </pre>
-          Instead, you must build in another directory.  E.g.:
-          <pre>
-$ mkdir build
-$ cd build
-$ ../configure [...]
-          </pre>
-        </dd>
-      </dl>
-      
       <h2><a name="4_0">Gcj Compile/Link Questions</a></h2>
  
       <h3><a name="4_1">4.1 Why do I get <tt>undefined reference to `main'</tt> 
