@@ -1,5 +1,9 @@
 2012-11-02  Gerald Pfeifer  <gerald@pfeifer.com>
 
+	* faq.html: Remove question about building in the source tree.
+
+2012-11-02  Gerald Pfeifer  <gerald@pfeifer.com>
+	
 	* index.html (href): Adjust reference to libjit.
 
 2012-11-02  Gerald Pfeifer  <gerald@pfeifer.com>
